fix: Glassmorphism theme shows unexpected scrollbar

--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ body {
   -ms-user-select: none;
   user-select: none;
   font-family: "poppins";
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1 1 0;
 }
 
 #hamburger {
@@ -136,9 +142,6 @@ h1 {
 }
 
 @media (max-width: 1024px) {
-  body {
-    height: 100vh;
-  }
   #hamburger {
     display: block;
     position: relative;
